# EasyVPK

./: CMakeLists.txt  README.md
sce_sys/livearea/contents/: template.xml
src/: main.cpp  main.hpp
src/net/: download.cpp
src/screens/: details.cpp  details.hpp  list.cpp  list.hpp  popup.cpp  popup.hpp
src/utils/: filesystem.cpp  filesystem.hpp  search.cpp  search.hpp  vitaPackage.cpp  vitaPackage.h  zip.cpp  zip.h
